# OpenInterest-Lens

./: .env.example  .gitignore  BETA-REVIEW.md  Dockerfile  LICENSE  PLAN.md  README.md  RESEARCH.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml  publish.yml
admin/: __init__.py  cli.py
deploy/: index.html
docs/: README.md  api-reference.md  deployment.md  onboarding.md  quickstart.md  sdk-guide.md
examples/: README.md  async_streaming.py  positioning_signals.py  quickstart.py  roll_calendar.py  smart_money_tracker.py  term_structure_demo.py
landing/: index.html  landing.html
scripts/: load_test.py  setup_db.py
sdk/: README.md  __init__.py  async_client.py  builder.py  client.py  models.py  pyproject.toml  websocket.py
sdk/src/openinterest_lens/: __init__.py  async_client.py  builder.py  client.py  exceptions.py  websocket.py
server/: alembic.ini  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 002_cot_settlements.py
server/app/: config.py  database.py  dependencies.py  main.py
server/app/ingestion/: __init__.py  cot.py  scheduler.py  settlements.py  validators.py
server/app/middleware/: __init__.py  auth.py  rate_limit.py  request_size.py  security.py
server/app/models/: db.py  ingestion.py  signal.py  term_structure.py
server/app/monitoring/: __init__.py  metrics.py  middleware.py
server/app/routers/: api.py  composite.py  contracts.py  examples.py  health.py  ingestion.py  quality.py  security.py  signals.py  term_structure.py  ws.py
server/app/services/: data_quality.py  redis_cache.py  redis_pubsub.py  signal_cache.py  ws_manager.py
server/app/signals/: __init__.py  composite.py  curve_utils.py  historical.py  positioning.py  roll_calendar.py  roll_pressure.py  term_structure.py
server/schemas/: roll_pressure_v1.json  signal_v1.json  term_structure_v1.json
tests/: conftest.py  test_admin_cli.py  test_api_endpoints.py  test_auth.py  test_composite_signal.py  test_contracts.py  test_ingestion.py  test_integration.py  test_positioning.py  test_roll_pressure.py  test_sdk.py  test_security.py  test_signals.py  test_term_structure.py  test_validators.py  test_websocket.py
