[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinterest-lens"
version = "0.1.0"
description = "Real-time futures market structure API — OI + COT + term structure as developer-ready signals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenInterest Lens Team"},
]
keywords = ["futures", "open-interest", "market-structure", "cot", "term-structure", "finance", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "openinterest-lens[dev]",
]

[project.urls]
Homepage = "https://github.com/MelaBuilt-AI/OpenInterest-Lens"
Documentation = "https://openinterestlens.melabuilt.ai"
Repository = "https://github.com/MelaBuilt-AI/OpenInterest-Lens"
Issues = "https://github.com/MelaBuilt-AI/OpenInterest-Lens/issues"

[project.scripts]
oil-admin = "admin.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["sdk", "admin"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "B018", "SIM102", "SIM108", "SIM105", "SIM117", "E402", "N806"]
"server/app/routers/ingestion.py" = ["N806"]
"server/app/routers/ws.py" = ["E402"]
"server/app/signals/curve_utils.py" = ["SIM102"]
"server/app/signals/roll_calendar.py" = ["SIM108"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]