[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinterest-lens"
version = "0.1.0"
description = "Python SDK for OpenInterest Lens — real-time futures market structure API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MelaBuilt AI"},
]
keywords = ["openinterest", "futures", "options", "open-interest", "cot", "cftc", "cme", "market-structure", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
ws = [
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/MelaBuilt-AI/OpenInterest-Lens"
Documentation = "https://openinterestlens.melabuilt.ai"
Repository = "https://github.com/MelaBuilt-AI/OpenInterest-Lens"
Changelog = "https://github.com/MelaBuilt-AI/OpenInterest-Lens/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"